--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.26</version>
+            <version>5.1.37</version>
+            <!--      <version>8.0.26</version>-->
         </dependency>
         <!--   mybatis-->
         <dependency>
@@ -111,6 +112,20 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+
+        <!--    验证码ValidateCode -->
+        <dependency>
+            <groupId>com.validatecode</groupId>
+            <artifactId>validatecode</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>jsr250-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
